--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,8 @@ ADMIN_EMAIL = "admin@example.com"
 ADMIN_PASSWORD = "admin123"
 
 # MongoDB Setup ( required )
-MONGODB_URI = "mongodb+srv://healthmate:healthmate_2025@cluster0.rxcnfwd.mongodb.net"
+# MONGODB_URI = "mongodb+srv://healthmate:healthmate_2025@cluster0.rxcnfwd.mongodb.net"
+MONGODB_URI = "mongodb+srv://sakthi050703:c1b49LI0KejXqONM@prescripto.aoh1slv.mongodb.net/?retryWrites=true&w=majority&appName=prescripto"
 
 # Cloudinary Setup ( required )
 CLOUDINARY_NAME = "ddymcbafk"
@@ -19,3 +20,25 @@ RAZORPAY_KEY_SECRET = "------ Razorpay Key Secret here ------"
 
 # Stripe Payment Integration
 STRIPE_SECRET_KEY="------ Stripe Secret Key here ------"
+
+
+# CURRENCY = "INR"
+# JWT_SECRET="greatstack"
+
+# # Admin Panel Credentials
+# ADMIN_EMAIL = "admin@example.com"
+# ADMIN_PASSWORD = "admin123"
+
+# # MongoDB Setup ( required )
+# MONGODB_URI = "mongodb+srv://healthmate:HealthMate_2025@cluster0.9axcuyi.mongodb.net/healthmate"
+# # Cloudinary Setup ( required )
+# CLOUDINARY_NAME = "ddymcbafk"
+# CLOUDINARY_API_KEY = "443514668415766"
+# CLOUDINARY_SECRET_KEY = "HCc-_ZkqdFIg0vrfiBmV1ZD-a_Q"
+
+# # Razorpay Payment Integration
+# RAZORPAY_KEY_ID = "rzp_test_dCbsu6ffUO9ZRj"
+# RAZORPAY_KEY_SECRET = "zVIN7MIA0QNDexRIwyQzZcxq"
+
+# # Stripe Payment Integration
+# STRIPE_SECRET_KEY="------ Stripe Secret Key here ------"
